APP: fixed some layout issues regarding images; STRAPI: added caption field to image_single

--- a/frontend/src/app/module/blog/component/post-dynamic/post-dynamic.component.scss
+++ b/frontend/src/app/module/blog/component/post-dynamic/post-dynamic.component.scss
@@ -4,7 +4,7 @@
   margin-bottom: 24px;
 
   // TODO: see blog-post.component.scss
-  &__image, .slider__image {
+  &__image {
     @include aspect-ratio-container(16, 9, cover, top) {
       img {
         width: 100vw;
